Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialClear(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfig(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_SerialConfigEx(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_SerialStatus(INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_SerialWr(LPUINT16 buf,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_TestProtocol(HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackRTCWD(INT32 MCflag,INT32 TAval,INT32 TRflag,INT32 SAval,INT32 count);
BTIEBRAPI VOID __stdcall BTIEBR_ValUnpackRTCWD(UINT16 cwd,LPINT32 BCASTflag,LPINT32 MCflag,LPINT32 TAval,LPINT32 TRflag,LPINT32 SAval,LPINT32 count);