Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_SerialClear Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SerialConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialConfig@16" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SerialConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialConfigEx@16" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SerialStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialStatus@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SerialWr Lib "BTIEBR.DLL" Alias "_BTIEBR_SerialWr@12" (ByVal buf As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_TestProtocol Lib "BTIEBR.DLL" Alias "_BTIEBR_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ValPackRTCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
        Public Declare Sub BTIEBR_ValUnpackRTCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValUnpackRTCWD@28" (ByVal cwd As UInt16, ByRef bcastflag As Int32, ByRef mcflag As Int32, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef count As Int32)
    End Class
